# libgtkmapserver

./: .gitignore  Makefile.am  autogen.sh  configure.ac  libgtkmapserver.pc.in
glade/: Makefile.am  gtkmapserver.xml
glade/icons/hicolor/16x16/actions/: Makefile.am
glade/icons/hicolor/22x22/actions/: Makefile.am
src/: Makefile.am  gtkmapserver.c  gtkmapserver.h
tests/: Makefile.am  gtkmapserver.c
